task-15/flask-app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app-ingress
  namespace: d-tursunov
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: dtursunov.nvrbckdown.uz
      http:
        paths:
          - path: /load-capability
            pathType: Exact
            backend:
              service:
                name: flask-app-clusterip-service
                port:
                  number: 80
